@@ -1,10 +1,12 @@
 package com.raidersleader.backend.domain.dungeon.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import com.raidersleader.backend.domain.dungeon.dto.DungeonDto;
 import com.raidersleader.backend.domain.dungeon.entity.Dungeon;
 import com.raidersleader.backend.domain.dungeon.repository.DungeonRepository;
 
@@ -17,11 +19,11 @@ public class DungeonQueryServiceImpl implements DungeonQueryService {
 	private final DungeonRepository dungeonRepository;
 
 	@Override
-	public List<String> findAllDungeons() {
+	public List<DungeonDto> findAllDungeons() {
 		List<Dungeon> dungeons = dungeonRepository.findAll();
 
 		return dungeons.stream()
-			.map(dungeon -> dungeon.getDungeonName())
-			.toList();
+			.map(dungeon -> new DungeonDto(dungeon))
+			.collect(Collectors.toList());
 	}
 }
